updated h3 color in the drones section for 508 color contrast fix

--- a/assets/sass/vha/pages/home/emergent-response.scss
+++ b/assets/sass/vha/pages/home/emergent-response.scss
@@ -2,6 +2,10 @@
 
 .emergent-response {
 
+    .heading-subtitle {
+        color: #EF723E;
+    }
+
     .inner-container {
         position: relative;
         background-color: #{color("gray-80")};
